feat: add initial header struture
I added the initial items for the header session. There is a logo, home, Collection Points and Contact. Futhermore, i added a Register button.

--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+        <!--Link para biblioteca de ícones-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" /><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="src/styles/styles.css"/>
+        <link rel="stylesheet" href="src/styles/header.css"/>
+        
         <title>CPcicla</title>
     </head>
     <body>
         <header>
-            <div id="header-cpcicla">
-                <h1>CPcicla</h1>
-            </div>
+            <!--Barra de navegação. Logo inclusa porque funcionará como botão de home-->
+            <nav id="navbar">
+                <figure>
+                    <img src="src/images/logo/escura-480px.png" alt="Logo do CPcicla escura" id="nav_logo">
+                </figure>
+
+                <ul id="nav_list">
+                    <li class="nav-item active">
+                        <a href="index.html">Início</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="collectionPoints.html">Pontos de Coleta</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html">Contato</a>
+                    </li>
+                </ul>
+
+                <button class="btn-default"> Cadastre-se </button>
+            </nav>
+
         </header>
+
         <main>
 
         </main>
@@ -18,4 +43,5 @@
 
         </footer>
     </body>
+ 
 </html>
